# llm-zoomcamp

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml
01-agentis-rag/: 03-rag.py  04-faq.py  05-search.py  06-building-prompt.py  07-llm.py  08-rag-helper.py  13-func-calling.py  14-agentic-loop.py  15-toyaikit.py  ingest.py  persistent-rag-ingest.py  persistent-rag.py
01-agentis-rag/homework/: homework.py  rag_helper.py
02-vector-search/: 02-embeddings.py  05-minsearch-vector.py  06-rag-vector.ipynb  06-rag-vector.py  07-sqlitesearch-vector.ipynb  08-pgvector.ipynb  ingest.py  rag_helper.py
03-orchestration/: docker-compose.yml
